# YukonGameG6

./: CMakeLists.txt  TestFunctionsMain.c  deckofcards.txt  deckofcards2.txt  deckofcards3.txt  deckofcardsSplitTest.txt  deckofcardsSplitTest2.txt  deckofcardsinvalid.txt  main.c  main.h  savecards.txt  savefile.txt  test_main  test_main.c  testloader.txt
